fix top results width too big

--- a/css/widgets.css
+++ b/css/widgets.css
@@ -247,7 +247,7 @@ svg.icon {
 	background-color: #333;
 	color: #eee;
 	border: 1px solid #222;
-	min-width: 30em;
+	max-width: 100%;
 	height: 360pt;
 }
 #topResults ol {
